[gd_scene load_steps=12 format=3 uid="uid://c6smt237ltqtp"]

[ext_resource type="Theme" uid="uid://c3vkkkcd77aua" path="res://scenes/main_theme.tres" id="1_l4fyo"]
[ext_resource type="Script" path="res://scenes/card_ui/card_ui.gd" id="2_tis6j"]
[ext_resource type="Script" path="res://scenes/card_ui/card_sate_machine.gd" id="3_1n5hv"]
[ext_resource type="StyleBox" uid="uid://b5mk3udrax0mq" path="res://scenes/card_ui/card_base_style_box.tres" id="3_hgd3c"]
[ext_resource type="Script" path="res://scenes/card_ui/card_states/card_base_state.gd" id="4_rabkq"]
[ext_resource type="Texture2D" uid="uid://bi5g44d6t7xuq" path="res://art/original_art/tile_0104.png" id="4_sh0k7"]
[ext_resource type="Script" path="res://scenes/card_ui/card_states/card_clicked_state.gd" id="5_kdrp0"]
[ext_resource type="Script" path="res://scenes/card_ui/card_states/card_dragging_state.gd" id="6_8k0sr"]
[ext_resource type="Script" path="res://scenes/card_ui/card_states/card_released_state.gd" id="7_keyew"]
[ext_resource type="Script" path="res://scenes/card_ui/card_states/card_aiming_state.gd" id="8_boehm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_twj7j"]
size = Vector2(50, 60)

[node name="CardUi" type="Control"]
custom_minimum_size = Vector2(50, 60)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -590.0
offset_bottom = -300.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
theme = ExtResource("1_l4fyo")
script = ExtResource("2_tis6j")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("3_hgd3c")

[node name="Cost" type="Label" parent="."]
layout_mode = 0
offset_right = 10.0
offset_bottom = 10.0
scale = Vector2(2, 2)
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -15.0
offset_right = 16.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_sh0k7")
expand_mode = 1
stretch_mode = 5

[node name="DropPointDetector" type="Area2D" parent="."]
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropPointDetector"]
position = Vector2(25, 30)
shape = SubResource("RectangleShape2D_twj7j")

[node name="CardStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_1n5hv")
initial_state = NodePath("CardBaseState")

[node name="CardBaseState" type="Node" parent="CardStateMachine"]
script = ExtResource("4_rabkq")

[node name="CardClickedState" type="Node" parent="CardStateMachine"]
script = ExtResource("5_kdrp0")
state = 1

[node name="CardDraggingState" type="Node" parent="CardStateMachine"]
script = ExtResource("6_8k0sr")
state = 2

[node name="CardReleasedState" type="Node" parent="CardStateMachine"]
script = ExtResource("7_keyew")
state = 4

[node name="CardAimingState" type="Node" parent="CardStateMachine"]
script = ExtResource("8_boehm")
state = 3

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="area_entered" from="DropPointDetector" to="." method="_on_drop_point_detector_area_entered"]
[connection signal="area_exited" from="DropPointDetector" to="." method="_on_drop_point_detector_area_exited"]
